--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "devstart": "nodemon ./bin/www"
   },
   "dependencies": {
+    "async": "^3.2.4",
     "cookie-parser": "~1.4.4",
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
+    "mongoose": "^6.9.1",
     "morgan": "^1.10.0",
     "pug": "2.0.0-beta11"
   },
