--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "async": "^3.2.4",
     "cookie-parser": "~1.4.4",
     "debug": "^4.3.4",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
+    "luxon": "^3.2.1",
     "mongoose": "^6.9.1",
     "morgan": "^1.10.0",
     "pug": "2.0.0-beta11"
